src/test/ui/illegal-ufcs-drop.stderr
error[E0040]: explicit use of destructor method
  --> $DIR/illegal-ufcs-drop.rs:8:5
   |
LL |     Drop::drop(&mut Foo)
   |     ^^^^^^^^^^ explicit destructor calls not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0040`.
